# StoryBox

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: story.json
data/story01/: world.yaml
data/story02/: world.yaml
data/story03/: world.yaml
data/story04/: world.yaml
data/story05/: world.yaml
data/story06/: world.yaml
data/story07/: world.yaml
data/story08/: world.yaml
data/story09/: world.yaml
data/story10/: world.yaml
data/story11/: world.yaml
data/story12/: world.yaml
data/story13/: world.yaml
data/story14/: world.yaml
data/story15/: world.yaml
data/story16/: world.yaml
data/story17/: world.yaml
data/story18/: world.yaml
data/story19/: world.yaml
data/story20/: world.yaml
reverie/: run.py
reverie/agent/: storyteller.py
reverie/common/: event.py  llm.py  utils.py
reverie/config/: config.py  logging_config.py
reverie/database/: database.py
reverie/database/table/: persona_table.py
reverie/environment/: area.py  city.py  object.py  place.py  world.py
reverie/manager/: datetime_manager.py  event_manager.py  faiss_manager.py  persona_manager.py  prompt_manager.py
reverie/persona/: persona.py
reverie/persona/cognitive/: detail.py  execute.py  perceive.py  plan.py  reflect.py  retrieve.py
reverie/persona/memory/: long_term_memory.py  memory_item.py  scratch.py  spatial_memory.py
reverie/prompts/prompt-1/: choose_focused_event.txt  choose_reaction_chat.txt  choose_reaction_chat_abnormal.txt  choose_reaction_move.txt  choose_reaction_move_abnormal.txt  generate_daily_plan_hourly.txt  generate_story_title.txt  (+22 more)
(+121 files in other folders)
